Add support for OGG/Speex file format
ASTERISK-18995 #close

Change-Id: I98518bd28fc8f95668b3fe27d2cab45045ff3f7a

--- a/CHANGES
+++ b/CHANGES
@@ -249,6 +249,13 @@ Functions
  * The func_odbc global option "single_db_connection" default value has been
    changed to 'no'.
 
+
+Formats
+------------------
+ * New module format_ogg_speex added which supports Speex codec inside
+   Ogg containers (filename extension .spx).
+
+
 CHANNEL
 ------------------
  * Added CHANNEL(onhold) item that returns 1 (onhold) and 0 (not-onhold) for
