sd_notify (systemd status notifications) support
sd_notify() is used to notify systemd of changes to the status of the
process. This allows the systemd daemon to know when the process
finished loading (and thus only start another program after Asterisk has
finished loading).

To use this, use a systemd unit with 'Type=notify' for Asterisk.

This commit also adds the function ast_sd_notify(), a wrapper around
sd_notify that does nothing if not built with systemd support.

Change-Id: Ied6a59dafd5ef331c5c7ae8f3ccd2dfc94be7811

--- a/CHANGES
+++ b/CHANGES
@@ -243,6 +243,10 @@ Core
    context. If enabled then a hint will be automatically created with the name of
    the device.
 
+* If Asterisk is built with systemd support, and run under systemd, it will
+  notify systemd of its state using sd_notify. Use 'Type=notify' in
+  asterisk.service.
+
 
 Functions
 ------------------
