--- a/CHANGES
+++ b/CHANGES
@@ -14,6 +14,10 @@
 
 res_pjsip
 ------------------
+ * Added "fax_detect_timeout" to endpoint.
+   The option determines how many seconds into a call before fax_detect
+   is disabled for the call.  Setting the value to zero disables the timeout.
+
  * Added "subscribe_context" to endpoint.
    If specified, incoming SUBSCRIBE requests will be searched for the matching
    extension in the indicated context. If no "subscribe_context" is specified,
