Create Asterisk-14:  Update CHANGES and UPGRADE files
Change-Id: I35b5f6657670cfa8985796fa1e1fe86ad299efdc

--- a/CHANGES
+++ b/CHANGES
@@ -9,6 +9,10 @@
 ==============================================================================
 
 ------------------------------------------------------------------------------
+--- Functionality changes from Asterisk 14 to Asterisk 15 --------------------
+------------------------------------------------------------------------------
+
+------------------------------------------------------------------------------
 --- Functionality changes from Asterisk 13 to Asterisk 14 --------------------
 ------------------------------------------------------------------------------
 
