dsp.c: Fix dsp.conf DTMF twist tolerance config options.
The twist options were applied backwards where normal was reversed
and reversed was normal.

Change-Id: Idf97e3a72f1edc5fca58f2fa7b20785922be0cae

--- a/CHANGES
+++ b/CHANGES
@@ -382,6 +382,11 @@ cdr_csv
 --- Functionality changes from Asterisk 13.10.0 to Asterisk 13.11.0 ----------
 ------------------------------------------------------------------------------
 
+Core
+------------------
+ * The dsp.conf DTMF normal and reverse twist tolerances were applied
+   backwards before.
+
 chan_dahdi
 ------------------
  * Added "faxdetect_timeout" option.
