dsp.c: Fix dsp.conf DTMF twist tolerance config options.
The twist options were applied backwards where normal was reversed
and reversed was normal.

Change-Id: Idf97e3a72f1edc5fca58f2fa7b20785922be0cae

--- a/CHANGES
+++ b/CHANGES
@@ -12,6 +12,11 @@
 --- Functionality changes since Asterisk 11.24 -------------------------------
 ------------------------------------------------------------------------------
 
+Core
+------------------
+ * The dsp.conf DTMF normal and reverse twist tolerances were applied
+   backwards before.
+
 chan_sip
 -----------
  * Session-Timers (RFC 4028) work for TCP (and TLS) transports as well now.
