--- a/CHANGES
+++ b/CHANGES
@@ -9,6 +9,36 @@
 ==============================================================================
 
 ------------------------------------------------------------------------------
+--- Functionality changes from Asterisk 14.0.0 to Asterisk 14.1.0 ----------
+------------------------------------------------------------------------------
+
+app_voicemail
+------------------
+ * Added "tps_queue_high" and "tps_queue_low" options.
+   The options can modify the taskprocessor alert levels for this module.
+   Additional information can be found in the sample configuration file at
+   config/samples/voicemail.conf.sample.
+
+res_pjsip_mwi
+------------------
+ * Added "mwi_tps_queue_high" and "mwi_tps_queue_low" global configuration
+   options to tune taskprocessor alert levels.
+
+ * Added "mwi_disable_initial_unsolicited" global configuration option
+   to disable sending unsolicited MWI to all endpoints on startup.
+   Additional information can be found in the sample configuration file at
+   config/samples/pjsip.conf.sample.
+
+chan_pjsip
+------------------
+ * A new dialplan function, PJSIP_SEND_SESSION_REFRESH, has been added. When
+   invoked, a re-INVITE or UPDATE request will be sent immediately to the
+   endpoint underlying the channel. When used in combination with the existing
+   dialplan function PJSIP_MEDIA_OFFER, this allows the formats on a PJSIP
+   channel to be re-negotiated and updated after session set up.
+
+
+------------------------------------------------------------------------------
 --- Functionality changes from Asterisk 13 to Asterisk 14 --------------------
 ------------------------------------------------------------------------------
 
@@ -365,26 +395,6 @@ cdr_csv
  * Added a new configuration option, "newcdrcolumns", which enables use of the
    post-1.8 CDR columns 'peeraccount', 'linkedid', and 'sequence'.
 
-
-------------------------------------------------------------------------------
---- Functionality changes from Asterisk 13.11.0 to Asterisk 13.12.0 ----------
-------------------------------------------------------------------------------
-
-app_voicemail
-------------------
- * Added "tps_queue_high" and "tps_queue_low" options.
-   The options can modify the taskprocessor alert levels for this module.
-   Additional information can be found in the sample configuration file at
-   config/samples/voicemail.conf.sample.
-
-res_pjsip_mwi
-------------------
- * Added "mwi_tps_queue_high" and "mwi_tps_queue_low" global configuration
-   options to tune taskprocessor alert levels.
- * Added "mwi_disable_initial_unsolicited" global configuration option
-   to disable sending unsolicited MWI to all endpoints on startup.
-   Additional information can be found in the sample configuration file at
-   config/samples/pjsip.conf.sample.
 
 ------------------------------------------------------------------------------
 --- Functionality changes from Asterisk 13.10.0 to Asterisk 13.11.0 ----------
