--- a/CHANGES
+++ b/CHANGES
@@ -43,6 +43,12 @@ res_pjsip
    when set will override the default user set on Contact headers in outgoing
    requests.
 
+app_confbridge
+------------------
+  * Some sounds played into the bridge are played asynchronously. This, for
+    instance, allows a channel to immediately exit the ConfBridge without having
+    to wait for a leave announcement to play.
+
 ------------------------------------------------------------------------------
 --- Functionality changes from Asterisk 13.10.0 to Asterisk 13.11.0 ----------
 ------------------------------------------------------------------------------
